2005-04-14  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/set-source-ref.png:
	* test/set-source.c: (draw), (main): Add set-source test in
	preparation for upcoming cairo_set_source patch.

2005-04-14  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-font.c (_cairo_simple_font_face_destroy): Remove
	a stray free() (#3029, Carl Worth)

	* test/select-font-no-show-text.c: Note that the bug is fixed.

2005-04-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-image-surface.c:
	(_cairo_image_abstract_surface_finish): Set freed pointer to NULL.
	
	* src/cairo-surface.c: (cairo_surface_finish): Fix to actually set
	surface->finished when done. Closes bug #2950 as documented in
	test/surface-finish-twice.c.

	* test/surface-finish-twice.c: Note that this bug is fixed.

2005-04-13  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/surface-finish-twice.c: (draw), (main): Add new test to
	exercise crash when calling cairo_surface_finish twice on the same
	surface.

2005-04-13  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/select-font-no-show-text.c: (draw), (main): Add new
	set-surface-no-show-text test.

	* test/cairo-test.c: (cairo_test): Be sure to call cairo_destroy
	even if the image size is 0,0 so that we can test bugs triggered
	during cleanup.

2005-04-13  Carl Worth  <cworth@cworth.org>

	* test/coverage-ref.png:
	* test/coverage.c: (draw_funcs), (draw): Temporarily remove all
	text from this test case until we come up with an approach for
	drawing the same text with different freetype configurations.

2005-04-13  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-traps.c (_cairo_traps_extract_region): Work around
	a pair of bugs elsewhere (denegerate trapezoids from tesellator,
	pixman_region_union_rect() failing on width/height zero rectangles)

2005-04-13  Owen Taylor  <otaylor@redhat.com>

	* src/cairoint.h src/cairo-traps.c: Add _cairo_traps_extract_region